--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">Moneiager</string>
     <string name="title_activity_on_start">OnStartActivity</string>
+    <string name="textview">TextView</string>
+    <string name="description">Description</string>
+    <string name="price">price</string>
+    <string name="button">Button</string>
+    <string name="add">Add</string>
+    <string name="new_item">New Item</string>
+    <string name="date">Date</string>
 </resources>
