--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="add">Add</string>
     <string name="new_item">New Item</string>
     <string name="date">Date</string>
+    <string name="resethistory">ResetHistory</string>
+    <string name="startnewsession">StartNewSession</string>
+    <string name="avaliable">Avaliable</string>
 </resources>
